erDiagram
    %% Роли и членство (приложение)

    users ||--o{ user_system_roles : user_id
    system_roles ||--o{ user_system_roles : role_id
    organizations ||--o{ organization_members : organization_id
    users ||--o{ organization_members : user_id

    organization_members {
        uuid id
        uuid organization_id
        uuid user_id
        text role
        text status
    }

    organizations {
        uuid id
        text name
    }

    system_roles {
        uuid id
        text code
        text name
    }

    user_system_roles {
        uuid user_id
        uuid role_id
        timestamptz assigned_at
    }

    users {
        uuid id
        text email
        text first_name
        text last_name
    }
